--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
 				<option value="22">expert (22x22, 100 bombes)</option>
 				<option value="30">maitre (30x30, 250 bombes)</option>
 			</select>
+
 			<button id='buttonNewGame' onclick="newGame();">nouvelle partie</button>
+			
 			<div id='chrono'>
-				
+				<p>
+					Temps: 
+				</p>
 			</div>
 		</section>
 
