gestion rigth-click et affichage dynamyque des bombes restantes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	</head>
 
 
+
 	<body>
 		<header>
 			<h1>Démineur</h1>
@@ -38,7 +39,9 @@
 
 
 		<section id="game">
-			<div id="container">
+			<div id='nbBomb'>
+			</div>
+			<div id="container"  onselectstart="return false" oncontextmenu="return false" ondragstart="return false" onMouseOver="window.status='..message perso .. '; return true;">
 			</div>
 		</section>
 
