add win function

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 		<section id="game">
-			<div id='nbBomb'>
+			<div id='gameInfo'>
 			</div>
 			<div id="container"  onselectstart="return false" oncontextmenu="return false" ondragstart="return false" onMouseOver="window.status='..message perso .. '; return true;">
 			</div>
