--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
 
 		<section id="game">
-			<div id="container">
+			<div id='gameInfo'>
+			</div>
+			<div id="container"  onselectstart="return false" oncontextmenu="return false" ondragstart="return false" onMouseOver="window.status='..message perso .. '; return true;">
 			</div>
 		</section>
 
