--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<section id="game">
 			<div id='gameInfo'>
 			</div>
-			<div id="win-loose"></div>
+			<div id="win-lose"></div>
 			<div id="container"
 				 onselectstart="return false"
 				 oncontextmenu="return false"
